--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,64 @@
 html {
+  box-sizing: border-box;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
   font-family: "Open Sans", sans-serif;
+  line-height: 1.5;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  line-height: 1.5;
+  background-color: #ccc;
+}
+
+h2 {
+  text-align: center;
+  margin: 1.5rem;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+ul li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1.5rem;
+  flex-wrap: nowrap;
+}
+
+ul li img {
+  width: 5rem;
+}
+
+ul li hgroup {
+  width: 16rem;
+}
+
+ul li p {
+  width: 24rem;
+}
+
+h3, h4 {
+  padding: 0;
+  margin: 0;
+}
+
+ul li a {
+  background-color: #444;
+  color: #fff;
+  text-decoration: none;
+  padding: .5rem 1rem .6rem;
+  border: none;
+  text-align: center;
+  display: inline-block;
 }
